Additional updates. Updated/fixed unit tests.